--- a/CreatureCare/appsettings.json
+++ b/CreatureCare/appsettings.json
@@ -1,10 +1,14 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "DefaultConnection": "server=localhost\\SQLExpress;database=CreatureCare;integrated security=true;Trust Server Certificate=true;Encrypt=Optional;"
+    },
+    "FirebaseProjectId": "creaturecare-ffd6d"
 }
